[BUGFIX] layers panel - hides open documentation/(i) and truncates the legend
Fixed #578

--- a/lizmap/www/css/map.css
+++ b/lizmap/www/css/map.css
@@ -1538,6 +1538,7 @@ div.modal h3 .text {
   overflow:auto;
   margin:0px;
   width:100%;
+  max-width:150px;
 /*  background:white;*/
 }
 #switcher div.legendGraphics img{
